tests/scripts/type_errors/method_does_not_exist.roto
function foo(msg: u32) {
	msg.foo();
}
